[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/themes/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/dialog_box/dialog_box.gd" type="Script" id=2]
[ext_resource path="res://ui/dialog_box/textures/end-of-page-prompt.png" type="Texture" id=3]
[ext_resource path="res://ui/dialog_box/audio/dialog-start.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "flash"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="DialogBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
margin_left = 16.0
margin_top = 8.0
margin_right = -16.0
margin_bottom = 72.0
color = Color( 0, 0, 0, 0.501961 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
anchor_right = 1.0
margin_left = 24.0
margin_top = 16.0
margin_right = -24.0
margin_bottom = 64.0
bbcode_enabled = true
bbcode_text = "Hello World!
This is an example of some dialog in a dialog box that may wrap around."
text = "Hello World!
This is an example of some dialog in a dialog box that may wrap around."

[node name="TextScrollTimer" type="Timer" parent="."]
pause_mode = 1

[node name="EndOfPagePrompt" type="Control" parent="."]
visible = false
margin_left = 288.0
margin_top = 56.0
margin_right = 304.0
margin_bottom = 72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="EndOfPagePrompt"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="EndOfPagePrompt"]
anims/flash = SubResource( 1 )

[node name="DialogStart" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Effects"
